2012-08-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h (from Hans-Bernhard Broeker)
	#define AXIS_CLONE_SIZE offsetof(AXIS, linked_to_primary)

2012-08-27  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* src/gp_types.h:  Remove superfluous comma from enum declaration.

2012-08-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/contour.c:  Invoke CheckZero() when automatically choosing contour
	levels.  The need for this check can be seen in contour.dem plots 19-21.

	* src/graph3d.c:  Rearrange code so that the plot key can be drawn in a
	separate pass ("set key opaque").

	* src/wxterminal/wxt_gui.cpp src/datafile.c term/emf.trm term/hpgl.trm:
	Trivial code cleanup to avoid compiler warnings (Sun or clang).

2012-08-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Remove incorrect fall-back definition for MAXINT.
	Note:  ~0>>1  is _not_ guaranteed to shift a 0 into the high bit!

	* src/term.c src/unset.c src/term_api.h:
	Consistent with the documented generic meaning of "unset", the command
	"unset terminal" now restores the default terminal present at program
	entry.  I.e., it is equivalent to "set terminal GNUTERM".

	* src/graphics.c (do_key_layout): The height of opaque fill for the key
	box must be adjusted to allow for superscripts/subscripts in the title.
	Bug #3556892

	* docs/gnuplot.doc:
	- Add sections for "unset output" and "unset terminal".
	- Remove index entries for "set style <plotstyle>" since there is no
	  such command.
	- Bessel functions Jn and Yn by convention use a capital letter. 

2012-08-23  Thomas Gaillard <tgaillard@users.sourceforge.net>

	* src/interpol.c:  Mean and sigma of kernel density function were
	incorrectly calculated.
	Bug #3519563

2012-08-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: In the code for drawing the key box and key samples,
	replace direct calls to term->move() and term->vector() with calls to
	clip_move() and clip_vector().
	Bug #3560531
