@@ -1,3 +1,10 @@
+2012-08-30  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/axis.h (STORE_WITH_LOG_AND_UPDATE_RANGE) src/plot2d.c:
+	Optimize out the check for linked axes when the primary axis is
+	COLOR_AXIS.  This avoids a compiler warning and also reduces the
+	eventual code size.
+
 2012-08-29  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/axis.h (from Hans-Bernhard Broeker)
